fix(backend): CORS 설정 개선 - allowCredentials와 와일드카드 충돌 해결
문제:
- SecurityConfig에서 CORS 설정이 하드코딩되어 있었음
- allowCredentials: true와 allowedHeaders: "*" 조합은 CORS 스펙 위반
- 브라우저가 보안상의 이유로 이 조합을 거부하여 CORS 에러 발생

해결:
1. SecurityConfig를 환경변수 기반 설정으로 변경
   - allowedMethods, allowedHeaders, allowCredentials 등 모두 설정 가능
   - application.yml에서 중앙 집중식 관리

2. allowedHeaders를 구체적인 헤더 목록으로 변경
   - Content-Type, Authorization, X-Requested-With, Accept, Origin
   - 와일드카드(*) 대신 명시적 헤더 목록 사용

3. exposedHeaders, maxAge 설정 추가
   - Authorization 헤더를 응답에 노출
   - Preflight 캐싱 시간 설정 가능

이제 프론트엔드에서 Google OAuth 로그인 시 CORS 에러가 발생하지 않습니다.

🤖 Generated with [Claude Code](https://claude.com/claude-code)